Fix content overflow (#3572)

--- a/src/amo/components/AddonsCard/styles.scss
+++ b/src/amo/components/AddonsCard/styles.scss
@@ -34,6 +34,8 @@
 
         grid-column: auto;
         margin-bottom: 0;
+        // Prevents content overflow.
+        min-width: 0;
       }
 
       .SearchResult-result {
@@ -51,6 +53,8 @@
         grid-column: 2 / 2;
         grid-row: 1 / 2;
         margin: 0;
+        // Prevents content overflow.
+        min-width: 0;
         width: auto;
       }
 
